# soroscope

./: Cargo.toml
core/: Cargo.toml
core/src/: lib.rs  main.rs
soroscope-api/: Cargo.toml
soroscope-api/src/: main.rs
web/: package-lock.json  package.json
web/.next/: trace
web/.next/cache/webpack/client-development/: index.pack.gz.old
web/.next/cache/webpack/server-development/: index.pack.gz.old
web/.next/server/pages/: _app.js  _error.js  index.js
web/.next/server/vendor-chunks/: @swc.js  lucide-react.js  next.js
web/.next/static/chunks/: webpack.js
web/.next/static/chunks/pages/: _app.js  index.js
web/.next/static/webpack/: webpack.23b9ae8ea00c22e6.hot-update.js  webpack.469eff381a80d011.hot-update.js  webpack.804282ea16c58f82.hot-update.js  webpack.d4d273a6a118b418.hot-update.js
web/.next/static/webpack/pages/: _app.23b9ae8ea00c22e6.hot-update.js  _app.469eff381a80d011.hot-update.js  _app.804282ea16c58f82.hot-update.js  index.469eff381a80d011.hot-update.js  index.d4d273a6a118b418.hot-update.js
web/components/: upload-zone.tsx
web/components/test/: upload-zone.test.tsx
web/components/test/test-config/: jest.config.js
web/pages/: index.tsx
