[package]
name = "soroscope-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "soroscope_core"
path = "src/lib.rs"

[dependencies]
soroban-sdk = "22.0.0" # Adjust to the latest compatible version
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
serde_json = "1.0"